--- a/EurekaServer/DockerFile
+++ b/EurekaServer/DockerFile
@@ -1,14 +1,9 @@
-# Используем официальный образ Java 21
 FROM openjdk:21-jdk-slim
 
-# Копируем собранный JAR-файл первого микросервиса в контейнер
-COPY target/EurekaServer-0.0.1.jar EurekaServer-0.0.1.jar
+COPY ./build/libs/EurekaServer-0.0.1.jar EurekaServer-0.0.1.jar
 
-# Устанавливаем точку монтирования
 VOLUME /tmp
 
-# Указываем порт, на котором будет работать первый микросервис
 EXPOSE 8761
 
-# Запускаем первый микросервис при старте контейнера
 ENTRYPOINT ["java", "-jar", "EurekaServer-0.0.1.jar"]
