--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -1,16 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/userDB
+spring.datasource.url=jdbc:mysql://mysql-user:3306/userDB
 spring.datasource.username=root
-spring.datasource.password=2409
+spring.datasource.password=root
 
 spring.application.name=auth-service
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-jwt.secret=your_secret_key_here
-jwt.expiration=86400
-
-
-server.port = 8080
+server.port=8081
