--- a/carSharing/src/main/resources/application.properties
+++ b/carSharing/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cardb
+spring.datasource.url=jdbc:mysql://mysql-car:3306/cardb
 spring.datasource.username=root
-spring.datasource.password=2409
+spring.datasource.password=root
 
 spring.application.name=carShare-service
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
@@ -11,4 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
-server.port = 8081
+server.port = 8082
