--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://mysql-user:3306/userDB
 spring.datasource.username=root
 spring.datasource.password=root
+eureka.instance.hostname=localhost
 
 spring.application.name=auth-service
 eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
