--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.hostname=localhost
