--- a/carSharing/src/main/resources/application.properties
+++ b/carSharing/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://mysql-car:3306/cardb
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.application.name=carShare-service
+spring.application.name=carshare-service
 eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
 
 spring.jpa.show-sql=true
