adding Github Actions

--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -31,8 +31,10 @@ jobs:
         with:
           java-version: '21'
           distribution: 'adopt'
+      - name: Working Directory is
+        run: pwd
       - name: Build with Gradle
-        run: ./gradle build
+        run: ./gradlew build
       - name: Build docker image
         working-directory: 'AuthService'
         run: docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/micro-car-workflow:test .
