--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -36,7 +36,7 @@ jobs:
       - name: All Files
         run: ls
       - name: Build with Gradle
-        run: cd AuthService; ./gradlew build
+        run: cd AuthService && chmod +x gradlew && ./gradlew build && cd ..
       - name: Build docker image
         working-directory: 'AuthService'
         run: docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/micro-car-workflow:test .
