--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -46,4 +46,4 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/micro-car-workflow:test
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/auth-service-workflow:test
