--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -47,3 +47,29 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push
         run: docker push ${{ secrets.DOCKER_USERNAME }}/auth-service-workflow:test
+
+  push-to-yandex:
+    needs: [ tests ]
+    name: Push to Cloud
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 21
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+          distribution: 'adopt'
+      - name: Build with Gradle
+        run: cd api-gateway && chmod +x gradlew && ./gradlew build && cd ..
+      - name: Build docker image
+        working-directory: 'api-gateway'
+        run: docker build -f Dockerfile -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-gateway:test .
+      - name: Login to YC Registry
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: cr.yandex
+          username: json_key
+          password: ${{ secrets.YC_KEYS }}
+      - name: Push tag to YC Registry
+        run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-gateway:test
