--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -50,7 +50,7 @@ jobs:
 
   push-to-yandex:
     needs: [ tests ]
-    name: Push to Cloud
+    name: Push to Yandex Cloud
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -61,10 +61,10 @@ jobs:
           java-version: '21'
           distribution: 'adopt'
       - name: Build with Gradle
-        run: cd api-gateway && chmod +x gradlew && ./gradlew build
+        run: cd carSharing && chmod +x gradlew && ./gradlew build
       - name: Build docker image
-        working-directory: 'api-gateway'
-        run: docker build -f Dockerfile -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-gateway:test .
+        working-directory: 'carSharing'
+        run: docker build -f Dockerfile -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing-service:test .
       - name: Login to YC Registry
         uses: docker/login-action@v3.0.0
         with:
@@ -72,4 +72,4 @@ jobs:
           username: json_key
           password: ${{ secrets.YC_KEYS }}
       - name: Push tag to YC Registry
-        run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-gateway:test
+        run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing-service:test
