Adding Prometheus + Grafana

--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8081
+
+#Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include=prometheus
