--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 server.port = 8083
+
+#Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include=prometheus
