--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -3,3 +3,6 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
+
+#Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include=prometheus
