--- a/carSharing/src/main/resources/application.properties
+++ b/carSharing/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://mysql-car:3306/cardb
-spring.datasource.username=root
-spring.datasource.password=root
+
+
+spring.profiles.active=nodb
+
+spring.sql.init.continue-on-error=true
 
 spring.application.name=carshare-service
 eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka
