--- a/carSharing/src/main/resources/application.properties
+++ b/carSharing/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://mysql-car:3306/cardb
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.profiles.active=nodb
 
