--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -65,7 +65,7 @@ jobs:
         run: cd carSharing && chmod +x gradlew && ./gradlew build
       - name: Build docker image
         working-directory: 'carSharing'
-        run: docker build -f Dockerfile -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing:test .
+        run: docker build -f Dockerfile -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing-service:test .
       - name: Login to YC Registry
         uses: docker/login-action@v3.0.0
         with:
@@ -73,7 +73,7 @@ jobs:
           username: json_key
           password: ${{ secrets.YC_KEYS }}
       - name: Push tag to YC Registry
-        run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing:test
+        run: docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing-service:test
 
   deploy-service:
     needs: [ push-to-yandex ]
@@ -85,5 +85,5 @@ jobs:
           yc-sa-json-credentials: ${{ secrets.YC_KEYS }}
           container-name: ${{ secrets.YC_CONTAINER_NAME }}
           folder-id: ${{ secrets.YC_FOLDER_ID }}
-          revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing:test
+          revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/zakharov-car-sharing-service:test
           revision-service-account-id: ${{ secrets.YC_SA_ID }}
