--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -65,9 +65,9 @@ jobs:
           java-version: '21'
           distribution: 'adopt'
       - name: Build with Gradle
-        run: cd api-gateway && chmod +x gradlew && ./gradlew build
+        run: cd apiGateway && chmod +x gradlew && ./gradlew build
       - name: Build docker image
-        working-directory: 'api-gateway'
+        working-directory: 'apiGateway'
         run: docker build -f Dockerfile -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}/api-gateway:test .
       - name: Login to YC Registry
         uses: docker/login-action@v3.0.0
