--- a/.github/workflows/dockerHub.yml
+++ b/.github/workflows/dockerHub.yml
@@ -89,5 +89,5 @@ jobs:
           container-name: ${{ secrets.YC_CONTAINER_NAME }}
           folder-id: ${{ secrets.YC_FOLDER_ID }}
           revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/car-share:test
-          revision-service-account-id: ${{ secrets.YC_SA_ID }
+          revision-service-account-id: ${{ secrets.YC_SA_ID }}
 
