--- a/carSharing/build.gradle
+++ b/carSharing/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
